--- a/2. nodejs/package.json
+++ b/2. nodejs/package.json
@@ -11,6 +11,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "nodejs": "file:",
         "swiper": "^11.0.7"
     },
     "devDependencies": {
