--- a/4. react-route-tailwind/package.json
+++ b/4. react-route-tailwind/package.json
@@ -13,6 +13,7 @@
         "polished": "^4.3.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-js": "file:",
         "react-router-dom": "^6.22.3",
         "react-scripts": "5.0.1",
         "styled-components": "^6.1.8",
